[gd_scene load_steps=9 format=2]

[ext_resource path="res://GCS - SHD/Misc/Pause.png" type="Texture" id=1]
[ext_resource path="res://Scenes/UI/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://GCS - SHD/Misc/ldfcomicsans-font/Ldfcomicsansbold-zgma.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/UI/Death counter.gd" type="Script" id=4]
[ext_resource path="res://GCS - SHD/screens/controlsSP.png" type="Texture" id=5]
[ext_resource path="res://GCS - SHD/screens/controlsMP.png" type="Texture" id=6]
[ext_resource path="res://Scenes/UI/Controls.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=3]
size = 19
font_data = ExtResource( 3 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.231373 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 124.0
margin_top = -171.0
margin_right = 474.0
margin_bottom = 179.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Death counter" type="RichTextLabel" parent="TextureRect"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -298.0
margin_top = -138.0
margin_right = -94.0
margin_bottom = -113.0
custom_colors/default_color = Color( 0.694118, 0.156863, 0.156863, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Death counter: "
text = "Death counter: "
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="TextureRect"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -276.001
margin_top = -35.0
margin_right = -102.0
margin_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/CenterContainer"]
margin_left = 12.0
margin_top = 11.0
margin_right = 162.0
margin_bottom = 124.0
rect_min_size = Vector2( 150, 113 )
custom_constants/separation = 11

[node name="Continue" type="Button" parent="TextureRect/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_right = 150.0
margin_bottom = 20.0
action_mode = 0
flat = true

[node name="Restart" type="Button" parent="TextureRect/CenterContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 150.0
margin_bottom = 51.0
action_mode = 0
flat = true

[node name="LevelSelect" type="Button" parent="TextureRect/CenterContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 150.0
margin_bottom = 82.0
action_mode = 0
flat = true

[node name="MainMenu" type="Button" parent="TextureRect/CenterContainer/VBoxContainer"]
margin_top = 93.0
margin_right = 150.0
margin_bottom = 113.0
action_mode = 0
flat = true

[node name="Controls" type="Control" parent="."]
margin_right = 273.0
margin_bottom = 269.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MP" type="Sprite" parent="Controls"]
position = Vector2( 148.8, 134 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="SP" type="Sprite" parent="Controls"]
position = Vector2( 148.8, 134 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )

[connection signal="pressed" from="TextureRect/CenterContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="TextureRect/CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="TextureRect/CenterContainer/VBoxContainer/LevelSelect" to="." method="_on_LevelSelect_pressed"]
[connection signal="pressed" from="TextureRect/CenterContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
